src/components/layout.css
body {
  margin: 0;
  font-family: "Work Sans", sans-serif;
  font-weight: 400;
  background-image: url("../images/background-image.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
}

.hidden {
  visibility: "hidden";
}

